<resources>
    <string name="app_name">FocusStartTestTask</string>
    <string name="currencies">Валюты</string>
    <string name="currency">Валюта:</string>
    <string name="value">Value</string>
    <string name="currency_list">Список валют</string>
    <string name="convert">Конвертировать</string>
    <string name="enter_amount">Введите колличество</string>
    <string name="result">Результат</string>
    <string name="currency_full_name">Currency full name</string>
    <string name="choose_currency_to_convert">Выберите валюту для конвретации</string>

    <string-array name="currency_codes">
        <item>CAD</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
        <item>KRW</item>
        <item>MYR</item>
    </string-array>
</resources>